# sanae-bot

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml  tmp_tst.py
src/common/: __init__.py  dbpool.py  easy_setting.py  levelsystem.py  log.py  rules.py  verify.py
src/plugins/: misc.py  sign_in.py  tmptst.py  tmptst2.py
src/plugins/_duel/: roulette.py
src/plugins/ballot/: __init__.py  ballot.py  ballot_fortune.py
src/plugins/botmanage/: __init__.py  verify.py
src/plugins/botmanage/plugins/: _online_reminder.py  add_black.py  broadcast.py  connect_reminder.py  entry_and_exit_grp.py  friend_requests.py  globalswitch.py  group_func_sw.py  help.py  online_reminder.py
src/plugins/chat/: __init__.py  corpus.py  tccli_nlp.py
src/plugins/dialogue/: __init__.py  corpus.py
src/plugins/group_aide/: anti_recall.py  entry_exit_notice.py  pokeme.py  repeater.py  tea_time.py  welcome.py
src/plugins/mining/: __init__.py  mine.py
src/plugins/misc/: __init__.py  anti_recall.py  cherugo.py  dujitang.py  query_abbr.py  repeater.py
src/plugins/mitu/: __init__.py  mitu_lib.py
src/plugins/music/: __init__.py  migu.py  netease.py  qqmusic.py
src/plugins/picsearcher/: __init__.py  ascii2d.py  ex.py  iqdb.py  saucenao.py  trace.py  yandex.py
src/plugins/setu/: __init__.py  lolicon.py  others.py  setu_lib.py
src/plugins/specific/: __init__.py
src/plugins/specific/973573381/: antididi.py
src/utils/: __init__.py  antiShielding.py
